k3s/app1/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-client
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-client
  template:
    metadata:
      labels:
        app: app1-client
    spec:
      volumes:
        - name: run
          emptyDir: {}
        - name: cache
          emptyDir: {}

      containers:
        - name: app1-client
          image: ghcr.io/yogeshhome/app1-client:007be6a3c323fab21298c524c825fd7b26a6857f
          ports:
            - containerPort: 80
          volumeMounts:
            - name: run
              mountPath: /var/run
            - name: cache
              mountPath: /var/cache/nginx
          resources:
            requests:
              cpu: "500m"     
              memory: "1Gi"    
            limits:
              cpu: "500m"     
              memory: "1Gi"    

      imagePullSecrets:
        - name: ghcr-secret
