k3s/app1/mongo-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app1-mongo
  namespace: app1
spec:
  serviceName: app1-mongo
  replicas: 1
  selector:
    matchLabels:
      app: app1-mongo
  template:
    metadata:
      labels:
        app: app1-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        livenessProbe:
          exec:
            command:
            - mongo
            - --username
            - root
            - --password
            - Kskarthik21
            - --authenticationDatabase
            - admin
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 40
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - mongo
            - --username
            - root
            - --password
            - Kskarthik21
            - --authenticationDatabase
            - admin
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
