k3s/app1/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-server
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-server
  template:
    metadata:
      labels:
        app: app1-server
    spec:
      containers:
        - name: app1-server
          image: ghcr.io/yogeshhome/app1-server:007be6a3c323fab21298c524c825fd7b26a6857f
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "1000m"     # 1 core guaranteed
              memory: "2Gi"    # 2 GB RAM guaranteed
            limits:
              cpu: "1500m"     # max 1.5 cores
              memory: "3Gi"    # max 3 GB RAM
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
      imagePullSecrets:
        - name: ghcr-secret
