k3s/app1/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-server
  namespace: app1
spec:
  selector:
    app: app1-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
